fixed text overflow with long username on post info

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -69,6 +69,8 @@ img {
 
   font-size: xx-small;
   float: left;
+
+  word-wrap: break-word;
 }
 
 .post-info a {
